--- a/NeptUNO/tld_test_placa_neptuno.qsf
+++ b/NeptUNO/tld_test_placa_neptuno.qsf
@@ -170,23 +170,6 @@ set_location_assignment PIN_A20 -to JOY_CLK
 set_location_assignment PIN_B20 -to JOY_LOAD
 set_location_assignment PIN_B19 -to JOY_DATA
 set_location_assignment PIN_AA18 -to joyP7_o
-set_global_assignment -name VERILOG_FILE ../common/ramtest.v
-set_global_assignment -name VERILOG_FILE ../common/joydecoder.v
-set_global_assignment -name VERILOG_FILE tld_test_placa_neptuno.v
-set_global_assignment -name VERILOG_FILE relojes.v
-set_global_assignment -name VERILOG_FILE ../common/video_processor.v
-set_global_assignment -name VERILOG_FILE ../common/vga_scandoubler.v
-set_global_assignment -name VERILOG_FILE ../common/sync_generator_pal_ntsc.v
-set_global_assignment -name VERILOG_FILE ../common/switch_mode.v
-set_global_assignment -name VERILOG_FILE ../common/spi.v
-set_global_assignment -name VERILOG_FILE ../common/sdtest.v
-set_global_assignment -name VERILOG_FILE ../common/sdramtest.v
-set_global_assignment -name VERILOG_FILE ../common/sdram_controller.v
-set_global_assignment -name VERILOG_FILE ../common/ps2_port.v
-set_global_assignment -name VERILOG_FILE ../common/mousetest.v
-set_global_assignment -name VERILOG_FILE ../common/flashtest.v
-set_global_assignment -name VERILOG_FILE ../common/audio_test.v
-set_global_assignment -name VHDL_FILE ../common/joystick_Sega_6_buttons.vhd
 set_location_assignment PIN_A17 -to sram_addr[18]
 set_location_assignment PIN_B18 -to sram_addr[17]
 set_location_assignment PIN_A18 -to sram_addr[16]
@@ -347,4 +330,24 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to testled1
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vsync
 set_location_assignment PIN_Y21 -to stm_rst_o
 set_location_assignment PIN_AA20 -to sram_oe_n
+set_global_assignment -name VERILOG_FILE ../common/joystick_Sega_6_buttons.v
+set_global_assignment -name VHDL_FILE ../common/joystick_Sega_6_buttons.vhd
+set_global_assignment -name VHDL_FILE ../common/dac_if.vhd
+set_global_assignment -name VHDL_FILE ../common/audio_top.vhd
+set_global_assignment -name VERILOG_FILE ../common/ramtest.v
+set_global_assignment -name VERILOG_FILE ../common/joydecoder.v
+set_global_assignment -name VERILOG_FILE tld_test_placa_neptuno.v
+set_global_assignment -name VERILOG_FILE relojes.v
+set_global_assignment -name VERILOG_FILE ../common/video_processor.v
+set_global_assignment -name VERILOG_FILE ../common/vga_scandoubler.v
+set_global_assignment -name VERILOG_FILE ../common/sync_generator_pal_ntsc.v
+set_global_assignment -name VERILOG_FILE ../common/switch_mode.v
+set_global_assignment -name VERILOG_FILE ../common/spi.v
+set_global_assignment -name VERILOG_FILE ../common/sdtest.v
+set_global_assignment -name VERILOG_FILE ../common/sdramtest.v
+set_global_assignment -name VERILOG_FILE ../common/sdram_controller.v
+set_global_assignment -name VERILOG_FILE ../common/ps2_port.v
+set_global_assignment -name VERILOG_FILE ../common/mousetest.v
+set_global_assignment -name VERILOG_FILE ../common/flashtest.v
+set_global_assignment -name VERILOG_FILE ../common/audio_test.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
